# NCALab

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  flake.nix  pyproject.toml  requirements.txt  train.py
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: docs.yml  draft-pdf.yml  python-package.yml
docs/: .gitignore  requirements.txt
docs/source/: conf.py  configuration.rst  example_growing.rst  example_selfclass.rst  index.rst  intro_nca.rst  intro_ncalab.rst  kfold.rst  search.rst  training.rst
nca/: __init__.py  basicNCA.py  data.py  losses.py  paths.py  training.py  utils.py  visualization.py
nca/export/: header.py
nca/models/: __init__.py  basicNCA.py  classificationNCA.py  growingNCA.py  segmentationNCA.py  taskNCA.py
ncalab/: __init__.py  autostepper.py  data.py  experiment.py  losses.py  prediction.py  training.py  utils.py  visualization.py
ncalab/data/: __init__.py  growingncadataset.py
ncalab/export/: __init__.py  header.py  onnx.py
ncalab/hooks/: __init__.py  hook.py  hook_output_noise.py
ncalab/models/: README.md  __init__.py  basicNCA.py  basicNCAhead.py  basicNCAperception.py  basicNCArule.py  cascadeNCA.py  classificationNCA.py  classificationNCAhead.py  depthNCA.py  ensemble.py  growingNCA.py  segmentationNCA.py  splitNCA.py
ncalab/models/applications/: __init__.py
ncalab/models/applications/classification/: __init__.py  classificationNCA.py  classificationNCAhead.py  selfclassificationNCA.py
ncalab/models/applications/depth/: __init__.py  depthNCA.py
ncalab/models/applications/growing/: __init__.py  growingNCA.py
ncalab/models/applications/segmentation/: __init__.py  binarysegmentationNCA.py  segmentationNCA.py
ncalab/models/basicNCA/: __init__.py  abstractNCA.py  abstractNCAhead.py  abstractNCArule.py  basicNCA.py  basicNCAhead.py  basicNCAperception.py  basicNCArule.py  mlpNCArule.py
ncalab/models/wrappers/: __init__.py  cascadeNCA.py
ncalab/search/: __init__.py  search.py
ncalab/training/: __init__.py  distillation_trainer.py  earlystopping.py  kfold.py  pool.py  trainer.py  traininghistory.py  trainingparameters.py  trainingsummary.py
ncalab/uncertainty/: __init__.py  uncertainty_estimator.py
ncalab/visualization/: __init__.py  animation.py  color.py  confusionmatrix.py  utils.py  visualization.py
scripts/: coveragebadge.py  download_example_weights.py  dry_train_examples.sh  pack_example_weights.py  save_animations.sh  train_examples.sh
tasks/: README.md
tasks/class_cifar10/: README.md  eval_class_cifar10.py  train_class_cifar10.py
tasks/class_medmnist/: README.md  eval_class_bloodmnist.py  eval_class_dermamnist.py  eval_class_pathmnist.py  train_class_bloodmnist.py  train_class_dermamnist.py  train_class_pathmnist.py  train_selfclass_medmnist.py  train_selfclass_pathmnist.py
tasks/depth/: config.py.example  train_depth.py
tasks/depth_endo/: config.py.example  depth_datasets.py  eval_depth.py  eval_depth_endoslam.py  generate_data.py  split_depth_kid2.csv  split_normal_small_bowel.csv  train_depth.py
tasks/growing_emoji/: .gitignore  README.md  eval_growing_emoji.py  finetune_growing_emoji.py  growing_utils.py  search_growing_emoji.py  train_growing_emoji.py
tasks/segmentation_kid1kid2/: .gitignore  README.md  config.py.example  create_nnunet_dataset.py  train_segmentation_kid.py
tasks/segmentation_kid2/: .gitignore  README.md  animate_kid2seg.py  baselines.py  config.py.example  eval_segmentation.py  kid2dataset.py  search_segmentation_kid.py  split_vascular.csv  train_baselines.py  train_multi_segmentation_kid.py  train_segmentation_kid.py
tasks/segmentation_kvasir_seg/: .gitignore  dataset_kvasir_seg.py  download_kvasir_seg.py  eval_segmentation_kvasir_seg.py  train_segmentation_kvasir_seg.py
tasks/selfclass_medmnist/: eval_selfclass_pathmnist.py  train_selfclass_bloodmnist.py  train_selfclass_chestmnist.py  train_selfclass_medmnist.py  train_selfclass_pathmnist.py
tasks/selfclass_mnist/: eval_selfclass_mnist.py  train_selfclass_mnist.py
tests/: test_autostepper.py  test_depth.py  test_growing.py  test_losses.py  test_prediction.py  test_segmentation.py  test_trainer.py  test_utils.py  test_visuals.py
weights/: growing_emoji.pth  segmentation_KID2_vascular.pth  segmentation_kvasir_seg.pth  selfclass_bloodmnist.pth  selfclass_chestmnist.pth  selfclass_medmnist.pth  selfclass_mnist.pth  selfclass_pathmnist.best.pth  selfclass_pathmnist.pth
whitepaper/: paper.bib  paper.md
