[project]
name = "ncalab"
version = "0.4.1"
description = "Training code and pre-trained models for Neural Cellular Automata on different datasets and tasks"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "absl-py==2.4.0",
    "albucore==0.0.24",
    "albumentations==2.0.8",
    "annotated-types==0.7.0",
    "asttokens==3.0.1",
    "astunparse==1.6.3",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.7",
    "click==8.3.3",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "numpy==2.4.4",
    "tqdm==4.67.3",
    "executing==2.2.1",
    "filelock==3.24.2",
    "fire==0.7.1",
    "flatbuffers==25.12.19",
    "fsspec==2025.3.2",
    "gast==0.7.0",
    "google-pasta==0.2.0",
    "grpcio==1.80.0",
    "gviz-api==1.10.0",
    "h5py==3.12.1",
    "idna==3.15",
    "imageio==2.37.3",
    "importlib-resources==7.1.0",
    "iniconfig==2.3.0",
    "ipython==9.13.0",
    "jedi==0.20.0",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "keras==3.14.1",
    "keras-applications==1.0.8",
    "kiwisolver==1.5.0",
    "lazy-loader==0.5",
    "libclang==18.1.1",
    "markdown==3.10.2",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.9",
    "matplotlib-inline==0.2.2",
    "mdurl==0.1.2",
    "medmnist==3.0.2",
    "ml-dtypes==0.5.4",
    "mpmath==1.3.0",
    "munch==4.0.0",
    "mypy==2.1.0",
    "mypy-extensions==1.1.0",
    "namex==0.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "onnxscript==0.7.0",
    "opencv-python-headless==4.13.0.92",
    "opt-einsum==3.4.0",
    "optree==0.19.1",
    "packaging==26.2",
    "pandas==3.0.3",
    "pandas-stubs==3.0.0.260204",
    "parso==0.8.7",
    "pexpect==4.9.0",
    "pillow==12.2.0",
    "platformdirs==4.9.6",
    "pluggy==1.6.0",
    "pretrainedmodels==0.7.4",
    "prompt-toolkit==3.0.52",
    "protobuf==7.34.1",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "pytest==9.0.3",
    "python-dateutil==2.9.0.post0",
    "pytorch-msssim==1.0.0",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "requests==2.34.0",
    "rich==15.0.0",
    "safetensors==0.7.0",
    "scikit-image==0.26.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "setuptools==81.0.0",
    "simsimd==6.5.16",
    "six==1.17.0",
    "stack-data==0.6.3",
    "stringzilla==4.6.1",
    "sympy==1.14.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.21.0",
    "termcolor==3.3.0",
    "threadpoolctl==3.6.0",
    "tifffile==2026.5.2",
    "traitlets==5.15.0",
    "types-pytz==2026.2.0.20260506",
    "types-requests==2.33.0.20260513",
    "types-tqdm==4.67.3.20260508",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
    "wcwidth==0.7.0",
    "werkzeug==3.1.8",
    "wheel==0.47.0",
    "wrapt==2.1.2",
    "zipp==3.23.1",
    "sphinx-autoapi==3.8.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.14.0",
    "attrs==26.1.0",
    "build==1.5.0",
    "frozenlist==1.8.0",
    "jaraco-functools==4.4.0",
    "more-itertools==11.0.2",
    "multidict==6.7.1",
    "oauthlib==3.3.1",
    "pip-tools==7.5.3",
    "pip-upgrader==2.4.5",
    "propcache==0.5.2",
    "proto-plus==1.28.0",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pyproject-hooks==1.2.0",
    "requests-oauthlib==2.0.0",
    "typing-inspection==0.4.2",
    "yarl==1.23.0",
    "cfgv==3.5.0",
    "distlib==0.4.0",
    "identify==2.6.10",
    "nodeenv==1.10.0",
    "pre-commit==4.6.0",
    "virtualenv==21.3.2",
    "sphinx==9.1.0",
    "sphinx-rtd-theme>=3.0.2",
    "twine>=6.1.0",
    "ruff==0.15.12",
    "torchmetrics==1.9.0",
    "segmentation-models-pytorch>=0.5.0",
    "scipy-stubs==1.17.1.4",
    "fonttools==4.62.1",
    "tornado==6.5.6",
    "uv==0.11.15",
    "onnx==1.21.0",
    "ipykernel>=7.2.0",
    "jupyter-core>=5.9.1",
    "black>=26.3.1",
    "cryptography==48.0.0",
    "pip==26.1.1",
    "astroid==4.1.2",
    "pathspec==1.1.1",
    "docutils==0.22.4",
    "timm==1.0.27",
    "optype==0.17.0",
    "imagesize==2.0.0",
    "google-auth==2.52.0",
    "hf-xet==1.5.0",
    "nh3==0.3.5",
    "huggingface-hub==1.14.0",
    "pipdeptree>=2.35.2",
    "torch==2.12.0",
]


[project.urls]
Documentation = "https://ncalab.readthedocs.io/en/latest/"
Repository = "https://github.com/MECLabTUDA/NCAlab"


[tool.setuptools]
packages = [ "ncalab", ]

[dependency-groups]
docs = [
    "sphinx-autoapi>=3.6.0",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]
doc = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]
